--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cmn-Hans">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="content-div">Hello World</div>
-    <div class="test-image"></div>  
     <script src="<%= htmlWebpackPlugin.options.vendor %>"></script>
 </body>
 </html>
